[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
async-nats = "0.38"
blake3 = "1.5.5"
ctrlc = "3.4"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.25"
rand = "0.8"
reqwest = {version = "0.12.9", features = ["json"]}
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc", "uuid"] }
schemars = {version = "0.8.0", features = ["uuid1", "derive"]}
serde = "1.0.216"
serde_json = "1.0.134"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.9"
tokio = {version = "1.42.0", features = ["full"]}
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.5.4"
uuid = { version = "1", features = ["serde", "v4"] }
